--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "svelte-bounding-box",
-	"version": "1.0.1",
+	"version": "1.0.0",
 	"license": "MIT",
 	"scripts": {
 		"dev": "vite dev",
@@ -35,7 +35,7 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
-		"@sveltejs/kit": "^0.0.30",
+		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/package": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"eslint": "^9.18.0",
@@ -49,8 +49,10 @@
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
-		"vite": "^5.4.11",
-		"@sveltejs/adapter-static": "^0.0.17"
+		"vite": "^5.4.11"
+	},
+	"dependencies": {
+		"@sveltejs/adapter-static": "^3.0.8"
 	},
 	"repository": {
 		"type": "git",
