--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "svelte-bounding-box",
-	"version": "2.0.0",
+	"version": "3.0.0",
 	"license": "MIT",
 	"scripts": {
 		"dev": "vite dev",
@@ -49,10 +49,9 @@
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
-		"vite": "^5.4.11"
-	},
-	"dependencies": {
+		"vite": "^5.4.11",
 		"@sveltejs/adapter-static": "^3.0.8"
+
 	},
 	"repository": {
 		"type": "git",
